--- a/messaging/build.gradle
+++ b/messaging/build.gradle
@@ -19,10 +19,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.mytechia:robobo-framework:0.3.5'
     compile 'com.github.yesidlazaro:GmailBackground:1.1'
-
+    compile 'org.twitter4j:twitter4j-core:4.0.5'
 }
