Updated to 0.3.0 to work with framework 1.0.0

--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,18 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.1'
+        classpath 'com.android.tools.build:gradle:2.2.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
+configurations {
+    all*.exclude group: 'ch.qos.logback', module: 'logback-classic'
+}
+
+
 
 allprojects {
     repositories {
