--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        disable 'InvalidPackage'
+    }
+
+
 }
 
 dependencies {
@@ -26,8 +31,10 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.mytechia:robobo-framework:0.3.5'
+    compile 'com.mytechia:robobo-framework:1.0.0'
     compile 'com.mytechia:robobo-util:0.1.0'
-    compile 'com.mytechia:robobo-rob-interface:0.2.3'
+    compile ('com.mytechia:robobo-rob-interface:0.2.10'){
+        exclude group: 'ch.qos.logback', module: 'logback-classic'
+    }
     compile project(':messaging')
 }
