--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 02 09:47:45 CET 2016
+#Mon May 08 11:39:46 CEST 2017
+ndk.dir=/home/luis/Android/Sdk/ndk-bundle
 sdk.dir=/home/luis/Android/Sdk
