--- a/messaging/build.gradle
+++ b/messaging/build.gradle
@@ -7,23 +7,47 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "0.3.0-SNAPSHOT"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
+    }
+
+    lintOptions {
+        disable 'InvalidPackage'
     }
 }
+//
+//configurations {
+//    all*.exclude group: 'ch.qos.logback', module: 'logback-classic'
+//}
+
+
+
+
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.mytechia:robobo-framework:0.3.5'
+    compile 'com.mytechia:robobo-framework:1.0.0'
     compile 'com.github.yesidlazaro:GmailBackground:1.1'
     compile 'org.twitter4j:twitter4j-core:4.0.5'
     compile 'org.twitter4j:twitter4j-stream:4.0.5'
+}
+
+apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
+
+
+afterEvaluate { project ->
+    android.libraryVariants.all { variant ->
+        tasks.androidJavadocs.doFirst {
+            classpath += files(variant.javaCompile.classpath.files)
+        }
+    }
 }
